    $config['use_manual_update'], then the feed grabbing thread will only
    run when the user presses 'U'(that's shift-U).

* Sun Aug 17 07:43:18 2003, pabs <pabs@pablotron.org>
  * raggle: added $config['update_on_startup']: do we update the feed
    list automatically on startup?

* Sun Aug 17 07:45:27 2003, pabs <pabs@pablotron.org>
  * raggle: minor cleanups
  * raggle: added $config['url_handlers']; raggle can handle 
    file: and exec: prefixed URLs as well. the syntax for file URLs is 
    the same as HTTP URLs, and it returns the file modification time as
    the last_modified (caching) information.  the exec: prefixed URLs
    look basically like this:
      'exec:cat /home/pabs/doc/test_rss_file.xml'
    also, we might consider restricting the refresh interval to HTTP
    URLs, since it doesn't make sense to have to force a two hour update
    on a file URL.  something to think about
  * raggle: fixed adding new entries with just the URL (itw asn't setting
    the title or the default refresh)

* Sun Aug 17 09:25:29 2003, pabs <pabs@pablotron.org>
  * raggle: don't import OPML URLs with exec: prefix. period.
  * raggle: don't check refresh interval on file: or exec: URLs

* Sun Aug 17 10:44:40 2003, pabs <pabs@pablotron.org>
  * added extras/rss_dir_list.rb (as a test for exec: URLs).  Note that
    this command can take quite a while to run on larger directories or
    slower machines (because of the stat() calls)

* Sun Aug 17 10:46:50 2003, pabs <pabs@pablotron.org>
  * added extras/test_html_renderer.rb (forgot about it before)

* Sun Aug 17 10:48:15 2003, pabs <pabs@pablotron.org>
  * raggle: add Ville to the list of authors at in the top comment

* Sun Aug 17 10:50:36 2003, pabs <pabs@pablotron.org>
  * BUGS: add srl's OSX bug report to BUGS (although it might be a 
    screwy install on his machine)

* Sun Aug 17 10:54:29 2003, pabs <pabs@pablotron.org>
  * raggle: disable manual update in default config (silly me)